--- a/circle.yml
+++ b/circle.yml
@@ -30,9 +30,9 @@ deployment:
       - docker push segfly/ssh-gitway:latest
       - docker push segfly/ssh-gitway:sample-git-server
   release:
-    tag: /[0-9]+(\.[0-9]+)(\.[0-9]+)(\.[0-9]+[a-z]+)/
+    tag: /v[0-9]+(\.[0-9]+)*/
     owner: segfly-oss
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker tag segfly/ssh-gitway:latest segfly/ssh-gitway:${CIRCLE_TAG}
-      - docker segfly/ssh-gitway:${CIRCLE_TAG}
+      - docker push segfly/ssh-gitway:${CIRCLE_TAG}
